first try to solve overflow

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,11 @@ html, body{
   overflow-x: hidden;
 }
 
+.mydimension{
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
 .titlebodycard {
   padding: 20px;
   display: flex;
